# primogem

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
demo-server/: index.html  main.py  primogem.db
primogem/: __init__.py  auth_server.py  cli.py  config.py  database.py  dependencies.py  jwks.py  key_manager.py  verifier.py
tests/: conftest.py  test_config.py  test_database.py  test_key_manager.py  test_security.py  test_verifier.py
